--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-*.txt
-*.png
-*.zip
-*.csv
+code/*.txt
+code/*.png
+code/*.zip
+code/*.csv
 __pycache__
-data/
-*.xlsx
-*.ttf
+code/*.xlsx
+code/*.ttf
+train_data/
+*.sh
+*.zip
+/data/基本数据/附件2、锡林郭勒统计年鉴（2016-2021）
